modify font & title

--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -56,8 +56,8 @@
         <img class="cover-figure f2 " src="./materials/cover-people1.png">
         <img class="cover-figure f3 m-hide" src="./materials/cover-people5.png">
         <div id="title">
-            <h2 class="align-self-center">台灣人親水大挑戰</h2>
-            <h3 class="align-self-center">我們與身邊的水域離多遠？</h3>
+            <h1 class="align-self-center">台灣人親水大挑戰</h1>
+            <h2 class="align-self-center">我們與身邊的水域離多遠？</h2>
         </div>
     </section>
 
@@ -85,10 +85,11 @@
 
         </section>
 
-        <section id="Title1" class="hor-grid">
-            <div class="trans-section">
-                <img class="svg" src="./materials/trans-sup.png">
+        <section id="Title1" class="trans-section hor-grid">
+            <div class="title-w">
+                <h2>親水的抗爭</h2>
             </div>
+            <img class="svg" src="./materials/trans-sup.png">
         </section>
 
         <section id="S1" class="article-section hor-grid">
@@ -124,10 +125,11 @@
             </div>
         </section>
 
-        <section id="Title2" class="hor-grid">
-            <div class="trans-section">
-                <img class="svg" src="./materials/trans-sup.png">
+        <section id="Title2" class="trans-section hor-grid">
+            <div class="title-w">
+                <h2>玩水的挑戰</h2>
             </div>
+            <img class="svg" src="./materials/trans-sup.png">
         </section>
 
         <section id="S2" class="article-section hor-grid">
@@ -147,10 +149,11 @@
 
         </section>
 
-        <section id="Title3" class="hor-grid">
-            <div class="trans-section">
-                <img class="svg" src="./materials/trans-sup.png">
+        <section id="Title3" class="trans-section hor-grid">
+            <div class="title-w">
+                <h2>限制的爭議</h2>
             </div>
+            <img class="svg" src="./materials/trans-sup.png">
         </section>
 
         <section id="S3" class="article-section hor-grid">
@@ -227,10 +230,11 @@
             </div>
         </section>
 
-        <section id="Title4" class="hor-grid">
-            <div class="trans-section">
-                <img class="svg" src="./materials/trans-sup.png">
+        <section id="Title4" class="trans-section hor-grid">
+            <div class="title-w">
+                <h2>地方的水域</h2>
             </div>
+            <img class="svg" src="./materials/trans-sup.png">
         </section>
 
         <section id="S4" class="article-section hor-grid">
@@ -304,10 +308,11 @@
             </article>
         </section>
 
-        <section id="Title5" class="hor-grid">
-            <div class="trans-section">
-                <img class="svg" src="./materials/trans-sup.png">
+        <section id="Title5" class="trans-section hor-grid">
+            <div class="title-w">
+                <h2>前進的方向</h2>
             </div>
+            <img class="svg" src="./materials/trans-sup.png">
         </section>
 
         <section id="S5" class="article-section hor-grid">
