--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -174,7 +174,7 @@
                 <article class="am30">
                     因《觀光發展條例》第36條第1項，及第60條第1項的規範，地方政府能以危險之由，規範人民下水的自由。
                 </article>
-                <article class="am30">
+                <article class="am30 mb-30">
                     然而，除了民團指出地方政府目前限制區域，仍有許多可再討論的地點外，大法官的意見書也指出，政府應與人民使用公共水域的自由平衡，「隨著戶外休閒
                     育樂之風氣及意識提高之後，政府管理措方色是否過度，也是值得討論之議題」。
                 </article>
@@ -188,7 +188,7 @@
                 <article class="am30">
                     中央2019年的「開放山林」政策，鼓勵人民走入自然，但地方政府依舊擔心民眾出意外，會有相關責任與輿論壓力。
                 </article>
-                <article class="am30">
+                <article class="am30 mb-30">
                     但是，大法官對此指出，台灣在開放山林政策後已修正《國家賠償法》第3條第3項，且「政府的責任在於開放山林政策
                     之同時亦應增加山林安全教育，包括登山安全措施，風險評估、安全管理及急難處理等。」而非一味以禁止限制。同時，大法官也提到，國外已有許多政府開設的登山學校，能整合各種資訊，此一方向是政府值得借鏡的對象。
                 </article>
@@ -202,7 +202,7 @@
                 <article class="am30">
                     許多民眾會好奇，使用自然真的是人民的基本權利嗎？還是這只是我們的娛樂休閒行為而已，和人民的基本自由沒有絕對關係？
                 </article>
-                <article class="am30">
+                <article class="am30 mb-30">
                     大法官意見書中說明，我國憲法雖未明定「自然環境的公眾近用權」，但我們應重新檢討人民使用自然的基本權利。意見書中舉例，瑞典人民的憲法，除了保障特定土地或自然環境之財產權外，人民也享有憲法保障之公眾近用權，得以接近使用自然環境。但是「我憲法對於上開基本權利，並未明文規定。惟基於人民近用自然環境之理念，如將之從實定法提升為憲法層次，自可凸顯我憲法對於人民近用自然環境之重視。」大法官的意思也是說，隨著時代改變，人民近用自然的權利應重新被討論。
                 </article>
             </div>
