--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -68,12 +68,12 @@
             </article>
             <div class="flip-container">
                 <div class="card figure">
-                    <img src="./materials/open-don.jpg">
+                    <img src="./materials/open-don.jpg" alt="冬山河照片">
                     <div class="img-caption hide">廖芷瑩／攝影</div>
                     <div class="ans hide">這裡是宜蘭冬山河<br>任意下水是違法的</div>
                 </div>
                 <div class="card figure">
-                    <img src="./materials/open-wei.jpg">
+                    <img src="./materials/open-wei.jpg" alt="微風運河照片">
                     <div class="img-caption hide">照片取自維基百科</div>
                     <div class="ans hide">這裡是台北微風運河<br>開放民眾進行水上活動</div>
                 </div>
@@ -457,38 +457,16 @@
                     <span>採訪攝影 廖芷瑩</span>
                 </div>
                 <div class="name">
-                    <span>網頁設計 陳宇亭</span>
-                </div>
-            </div>
-            <div class="credit">
-                <div class="title-t">圖片來源</div>
-                <div class="name">
-                    <div>Image generator</div>
-                </div>
-                <div class="name">
-                    <div>Shutterstock</div>
-                </div>
-            </div>
-            <div class="credit">
-                <div class="title-t">特別感謝</div>
-                <div class="name">
-                    <div>台大新聞所謝吉隆老師</div>
-                </div>
-                <div class="name">
-                    <div>台大新聞所何家慈同學</div>
+                    <span>網頁製作 陳宇亭</span>
                 </div>
             </div>
             <div class="credit">
                 <div class="title-t">上線時間：2023.06.30 </div>
                 <div class="title-t">Copyright © 2023 </div>
             </div>
-
-
         </div>
-
     </footer>
-
-
+    
 </body>
 
 </html>
