--- a/report/close-to-water-challenge.html
+++ b/report/close-to-water-challenge.html
@@ -107,7 +107,7 @@
                 <div class="img-caption">李元治和夥伴去抗議時發言。照片提供／李元治</div>
             </div>
             <article class="am30">
-                從事水域活動20年的李元治因為無法理解這樣的社會情況，他帶過那麼多客人玩過台灣的河川、湖泊，想讓民眾更了解水的特性、台灣水岸風光與自然環境。他認為，與台灣人親近的溪河湖水，絕對會是我們生活的好友，而非危險的深淵。
+                從事水域活動20年的李元治表示，他帶過許多學生和客人從事水域活動，看自然風光，台灣的水資源應該是人民生活的好夥伴，而非危險的深淵。
             </article>
             <article class="am30">
                 在這幾年間，他與同好組成了「台灣開放水域聯盟」，並在全台灣尚未開放的水域中，觀察也爭取開放的機會，希望和他們一樣愛好水上活動的台灣人們，也可以都擁有近用自然的權利。
@@ -120,7 +120,7 @@
                 台灣政府在2019推出「向山致敬」政策，後續也持續鼓勵民眾們走向山林，以及推動山林活動透明化、設施簡便、落實教育、登山自主管理等。此一走向，也預示著台灣的戶外活動進入下一個階段，國家政府不再希望全面掌控戶外資源，但相對的人民也該自負責任。
             </article>
             <article class="am30">
-                但是，李元治與他的夥伴們無法理解，當台灣戶外活動進入下一階段時，當我們要親近生活中的溪河湖，為何還是如此困難？
+                然而，李元治與他的夥伴們無法理解，當台灣戶外活動進入下一階段時，當我們要親近生活中的溪河湖，為何還是如此困難？
             </article>
             <div class="figure mt-30" data-aos="zoom-in">
                 <img src="./materials/s1-leesocialmovementv2.jpg">
@@ -242,21 +242,21 @@
 
         <section id="S4" class="article-section hor-grid">
             <article class="am30">
-                李元治被開罰的地方，隸屬於宜蘭縣政府管轄範圍，而宜蘭縣也是許多縣市中，目前仍嚴格限制可下水的區域。然而，多水的蘭陽平原，其實孕育出許和水相關的活動與人才。像是在宜蘭長大的Monkey教練，從高中開始就是羅東高商的風帆選手，後來到澎湖科技大學就讀海洋遊憩系，近期也加入運動平台擔任教練，希望推廣立槳等新興的水上運動。
+                李元治被開罰的地方，隸屬於宜蘭縣政府管轄範圍，而宜蘭縣也是許多縣市中，目前仍嚴格限制可下水的區域。然而，多水的蘭陽平原，其實孕育出許多和水相關的活動與人才。像是在宜蘭長大的Monkey教練，從高中開始就是羅東高商的風帆選手，後來到澎湖科技大學就讀海洋遊憩系，近期也加入運動平台擔任教練，希望推廣立槳等新興的水上運動。
             </article>
             <div class="figure mt-30" data-aos="zoom-in">
                 <img src="./materials/s4-training.jpg">
                 <div class="img-caption">冬山河畔有冬山河水上運動訓練基地。攝影／廖芷瑩</div>
             </div>
             <article class="am30">
-                Monkey教練從小到大訓練的場地之一，就是冬山河的河道，因為國家在親水公園旁建有運動訓練基地，而Monkey和他的同學們，從小就在冬山河區段上訓練及比賽。恰巧的，冬山河也正是李元治和夥伴們時常下水的地方，因為他們提起，冬山河的水流若非颱風或大雨，平時河水非常緩和，對水上遊憩活動非常友善。
+                Monkey教練從小到大訓練的場地之一，是冬山河的河道，因為國家在親水公園旁建有運動訓練基地，而Monkey和他的同學們，從小就在冬山河區段上訓練及比賽。恰巧的，冬山河也正是李元治和夥伴們時常下水的地方，因為他們提起，冬山河的水流若非颱風或大雨，平時河水非常緩和，對水上遊憩活動非常友善。
             </article>
             <div class="figure mt-30" data-aos="zoom-in">
                 <img src="./materials/s4-localcoachmonkey.jpg">
                 <div class="img-caption">熱愛水上運動的Monkey教練。攝影／廖芷瑩</div>
             </div>
             <article class="am30">
-                然而，這條優美的河道，事實上因為行政管轄之故，分屬於不同行政機關，各區段目前被設定的使用目標也不相同。
+                然而，Monkey教練與李元治都提到，他們若沒經過冗長的申請，只要一下水，就會被檢舉或驅離，而事實上，這條優美的河道也因行政管轄劃分之故，各段分屬不同行政機構。以下是冬山河各河段的情況解析。
             </article>
             <div class="break"></div>
             <div id="video-section">
